# knowledge-base-platform

./: .gitignore  README.md  package-lock.json  pyproject.toml  start_backend.py  start_frontend.py
app/: __init__.py  main.py
app/api/: __init__.py  client.py
app/components/: header.py  kb_list.py  sidebar.py
backend/: data.py  kill.py  main.py  models.py  start.py  storage.py  test_storage.py
backend/api/: __init__.py  client.py
backend/data/: document_versions.json  documents.json  kb_versions.json  knowledge_bases.json  projects.json  users.json
data/: document_versions.json  documents.json  knowledge_bases.json  users.json
frontend/: README.md  main.py  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: __init__.py  breadcrumbs.tsx  create-kb-version.tsx  create-knowledge-base.tsx  dashboard.tsx  document-versions.tsx  documents.py  documents.tsx  header.py  header.tsx  kb-version-detail.tsx  knowledge-base-detail-tabs.tsx  knowledge-base-detail.tsx  knowledge-base-versions.tsx  knowledge-bases.tsx  project-selector.tsx  settings.tsx  sidebar.py  sidebar.tsx  theme-provider.tsx  theme-toggle.tsx  user-account-menu.tsx  user-menu.tsx  welcome.tsx
frontend/lib/: api-client.ts  types.ts
frontend/nextjs/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/nextjs/app/: globals.css  layout.tsx  page.tsx
frontend/nextjs/components/: documents.tsx  header.tsx  knowledge-bases.tsx  settings.tsx  sidebar.tsx  welcome.tsx
frontend/streamlit/: __init__.py  main.py
frontend/streamlit/components/: documents.py  header.py  sidebar.py
