[tool.poetry]
name = "kb-streamlit"
version = "0.1.0"
description = "A Streamlit app for managing knowledge bases and documents"
authors = ["Helton Carlos de Souza <heltoncarlossouza@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
poethepoet = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 

[tool.poe.tasks.frontend]
shell = """
  python start_frontend.py
"""

[tool.poe.tasks.backend]
shell = """
  python start_backend.py
"""
