[tool.poetry]
name = "kb-platform"
version = "0.1.0"
description = "A modern knowledge base platform with Next.js frontend and FastAPI backend"
authors = ["Helton Carlos de Souza <heltoncarlossouza@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
pydantic = "^2.7.0"
watchfiles = "^0.21.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
poethepoet = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 

[tool.poe.tasks.backend]
shell = """
  python -m backend.start
"""

[tool.poe.tasks.kill-backend]
shell = """
  python backend/kill.py
"""

[tool.poe.tasks.frontend]
shell = """
  cd frontend
  npm run dev
"""

[tool.poe.tasks.frontend-install]
shell = """
  cd frontend
  rm -rf node_modules package-lock.json
  npm install
"""

[tool.poe.tasks.frontend-build]
shell = """
  cd frontend
  npm run build
"""

[tool.poe.tasks.frontend-start]
shell = """
  cd frontend
  npm start
"""
